--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit>=1.28.0
 openai-whisper>=20231117
-youtube-transcript-api>=0.6.0
+youtube-transcript-api>=0.6.2
 yt-dlp>=2023.9.24
 torch>=2.0.0
+requests>=2.25.1
